Adjust to receive the applications

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -34,7 +34,10 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "react": "https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.production.min.js",
+        "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.production.min.js"
+
       }
     }
   </script>
@@ -47,8 +50,10 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@single-spa/welcome": "https://unpkg.com/single-spa-welcome/dist/single-spa-welcome.js",
-        "@spms/root-config": "//localhost:9000/spms-root-config.js"
+        "@spms/root-config": "//localhost:9000/spms-root-config.js",
+        "@spms/core": "//localhost:8080/spms-core.js",
+        "@spms/navbar": "//localhost:8081/spms-navbar.js",
+        "@spms/react-app": "//localhost:8082/spms-react-app.js"
       }
     }
   </script>
@@ -58,7 +63,7 @@
     If you need to support Angular applications, uncomment the script tag below to ensure only one instance of ZoneJS is loaded
     Learn more about why at https://single-spa.js.org/docs/ecosystem-angular/#zonejs
   -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/zone.js@0.11.3/dist/zone.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/import-map-overrides@2.2.0/dist/import-map-overrides.js"></script>
   <% if (isLocal) { %>
@@ -76,6 +81,7 @@
   </noscript>
   <script>
     System.import('@spms/root-config');
+    System.import('@spms/styleguide');
   </script>
   <import-map-overrides-full show-when-local-storage="devtools" dev-libs></import-map-overrides-full>
 </body>
