Add angular component

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -53,7 +53,8 @@
         "@spms/root-config": "//localhost:9000/spms-root-config.js",
         "@spms/core": "//localhost:8080/spms-core.js",
         "@spms/navbar": "//localhost:8081/spms-navbar.js",
-        "@spms/react-app": "//localhost:8082/spms-react-app.js"
+        "@spms/react-app": "//localhost:8082/spms-react-app.js",
+        "@spms/angular-app": "//localhost:4200/main.js"
       }
     }
   </script>
