Configure the styleguide utility

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -37,7 +37,6 @@
         "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
         "react": "https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.production.min.js",
         "react-dom": "https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.production.min.js"
-
       }
     }
   </script>
@@ -54,7 +53,8 @@
         "@spms/core": "//localhost:8080/spms-core.js",
         "@spms/navbar": "//localhost:8081/spms-navbar.js",
         "@spms/react-app": "//localhost:8082/spms-react-app.js",
-        "@spms/angular-app": "//localhost:4200/main.js"
+        "@spms/angular-app": "//localhost:4200/main.js",
+        "@spms/styleguide": "//localhost:8083/spms-styleguide.js"
       }
     }
   </script>
